[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/UIBack2.png" type="Texture" id=1]
[ext_resource path="res://Assets/UICounter1.png" type="Texture" id=2]
[ext_resource path="res://Assets/UICounter2.png" type="Texture" id=3]
[ext_resource path="res://Scripts/Interface.gd" type="Script" id=4]
[ext_resource path="res://Assets/Raleway-Light.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 91
outline_size = 1
font_data = ExtResource( 5 )

[node name="Interface" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 40.0
margin_bottom = 40.0
rect_scale = Vector2( 5, 5 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="."]
margin_top = 8.6
margin_right = 98.0
margin_bottom = 48.6
texture = ExtResource( 1 )
patch_margin_left = 22
patch_margin_top = 21
patch_margin_right = 37
patch_margin_bottom = 14
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Left" type="TextureRect" parent="NinePatchRect"]
margin_top = 6.0
margin_right = 256.0
margin_bottom = 262.0
rect_scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Left2" type="TextureRect" parent="NinePatchRect"]
margin_top = 6.0
margin_right = 64.0
margin_bottom = 70.0
rect_scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Middle" type="TextureRect" parent="NinePatchRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -32.0
margin_top = 6.0
margin_right = 32.0
margin_bottom = 70.0
rect_scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Middle2" type="TextureRect" parent="NinePatchRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -32.0
margin_top = 6.0
margin_right = 32.0
margin_bottom = 70.0
rect_scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Right" type="TextureRect" parent="NinePatchRect"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -64.0
margin_top = 6.0
margin_bottom = 70.0
rect_scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Right2" type="TextureRect" parent="NinePatchRect"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -64.0
margin_top = 6.0
margin_bottom = 70.0
rect_scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="NinePatchRect"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -41.0
margin_top = -13.0
margin_right = 15.0
margin_bottom = 95.0
rect_scale = Vector2( 0.2, 0.2 )
custom_fonts/font = SubResource( 1 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}
